[package]
name = "snbc"
version = "0.5.2"
description = """
An snbc-printer driver for Rust

## Minimum Rust version policy (MSRV)
This crate's minimum supported rustc version is 1.46.0.
"""
readme = "README.md"
keywords = ["ESC", "POS", "snbc", "printer", "driver"]
# repository = "https://github.com/local-group/rust-escposify"
license = "MIT"
authors = ["Qian Linfeng <thewawar@gmail.com>"]
edition = "2021"

[features]
qrcode_builder = ["qrcode"]

[dependencies]
encoding = "0.2"
byteorder = "1.4"
image = "0.24"

qrcode =  { version = "0.12", optional = true }

[dev-dependencies]
tempfile = "2.2"
